--- a/gateway-service/src/main/resources/application.yaml
+++ b/gateway-service/src/main/resources/application.yaml
@@ -14,6 +14,11 @@ spring:
           predicates:
             - Path=/auth/**
 
+        - id: bob-member-service
+          uri: lb://BOB-MEMBER-SERVICE
+          predicates:
+            - Path=/members/**
+
 eureka:
   client:
     fetch-registry: true
